# end-to-end-pdf-rag-system

./: .env.example  README.md  pyproject.toml
config/: alert_rules.yml  docker-compose.yml  loki.yml  prometheus.yml
grafana/provisioning/dashboards/: PDF rag-loki-logs.json  dashboards.yml  rag-system-dashboard.json
grafana/provisioning/datasources/: prometheus.yml
src/: api.py  app.py  helper_func.py  loki_logger.py
